<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urg_node2</name>
  <version>1.0.0</version>
  <description>Hokuyo 2D LiDAR driver</description>
  <maintainer email="f-wada@hokuyo-aut.co.jp">Fumihiko Wada</maintainer>
  <maintainer email="embedded-ros@esol.co.jp">Tomonori Okazaki</maintainer>
  <author email="f-wada@hokuyo-aut.co.jp">Fumihiko Wada</author>
  <author email="embedded-ros@esol.co.jp">Tomonori Okazaki</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
